# miniGL

./: .gitignore  CMakeLists.txt  README.md
src/: EasyFilePath.h  EasyPlyLoader.h  main.cpp
src/Common/: Common.h
src/Visualization/: ImguiEasyUse.h  MiniGL.cpp  MiniGL.h  Selection.h  Shader.cpp  Shader.h  Visualization.h
